# vnm-zeroshot-eval

./: .gitignore  .gitmodules  LICENSE  README.md  README_NIC.md  docker_setup.sh  init_project.sh  init_submodules.sh  remove_submodules.sh  talker_with_zenoh.launch.py
.devcontainer/: Dockerfile  Dockerfile.save  deployment_environment.yaml  deployment_environment.yaml.save  setup.sh
.devcontainer/CARE/: Dockerfile  setup.sh
.devcontainer/NaviD/: Dockerfile  deployment_environment.yaml  setup.sh
.devcontainer/NoMad/: Dockerfile  setup.sh
.devcontainer/SafeGNM/: Dockerfile  requirements.txt  setup.sh
.devcontainer/crossformer/: Dockerfile  crossformer_environment.yml  requirements.txt  requirements_pc.txt  setup.sh
.devcontainer/gnm/: Dockerfile  setup.sh
.devcontainer/naivibridger/: Dockerfile  setup.sh
.devcontainer/remotevisualizer/: Dockerfile  config.rviz  setup.sh
.devcontainer/test_crossformer/: Dockerfile  constraints.txt  crossformer_environment.yml  requirements.txt  setup.sh
.github/workflows/: mirror.yml
LICENSES/: LICENSE-NaiviBridger  LICENSE-crossformer  LICENSE-visualnav-transformer
log/: latest_build
metrics/bags/: REAMDE.md
metrics/config/: experiments.yaml  features.yaml  parameters.yaml
metrics/parameters_analysis/config1/: robot.yaml
metrics/scripts/: README.md  compare_last_img.py  data_augmentation.py  find_last_distances.py  find_last_img.py  image_feat_analysis_nomad.py  plot.ipynb  plot.py  plot_closest_node.py  plot_line_polar.py  plot_trajectory.py  plots.ipynb  pred_dist_analysis.py  process_bags.py  process_closest_node.py  process_node_error.py  threshold_analysis.py  utils.py  utils_nomad.py
ros/ros1_ws/src/robo-gym-robot-servers/: Dockerfile  README.md
ros/ros1_ws/src/robo-gym-robot-servers/bunker_robot_server/: CMakeLists.txt  package.xml  setup.py
ros/ros1_ws/src/robo-gym-robot-servers/bunker_robot_server/launch/: bunker.launch
ros/ros1_ws/src/robo-gym-robot-servers/bunker_robot_server/scripts/: robot_server.py
ros/ros1_ws/src/robo-gym-robot-servers/interbotix_arm_robot_server/: CMakeLists.txt  package.xml  setup.py
ros/ros1_ws/src/robo-gym-robot-servers/interbotix_arm_robot_server/launch/: interbotix_arm_robot_server.launch
ros/ros1_ws/src/robo-gym-robot-servers/interbotix_arm_robot_server/rviz/: interbotix_occupancy_rl.rviz  interbotix_rl.rviz
ros/ros1_ws/src/robo-gym-robot-servers/interbotix_arm_robot_server/scripts/: joint_trajectory_command_handler.py  robot_server.py
ros/ros1_ws/src/robo-gym-robot-servers/interbotix_rover_robot_server/: CMakeLists.txt  package.xml  setup.py
ros/ros2_ws/src/robo-gym-robot-servers/: .gitignore  README.md  docker-compose.yml
ros/ros2_ws/src/robo-gym-robot-servers/bunker_robot_server/: CMakeLists.txt  package.xml  setup.py
ros/ros2_ws/src/robo-gym-robot-servers/bunker_robot_server/bunker_robot_server/: camera.yaml  robot_server.py  ros_bridge.py
ros/ros2_ws/src/robo-gym-robot-servers/bunker_robot_server/launch/: bunker_robot_server.launch.py  bunker_server.launch
ros/ros2_ws/src/robo-gym-robot-servers/bunker_robot_server/rviz/: interbotix_rl.rviz
ros/ros2_ws/src/robo-gym-robot-servers/bunker_robot_server/urdf/: locobot.urdf.xacro
ros/ros2_ws/src/robo-gym-robot-servers/ur_robot_server/: CMakeLists.txt  package.xml  setup.py
ros/ros2_ws/src/robo-gym-robot-servers/ur_robot_server/config/: ur10_controllers.yaml  ur10e_controllers.yaml  ur16e_controllers.yaml  ur3_controllers.yaml  ur3e_controllers.yaml  ur5_controllers.yaml  ur5e_controllers.yaml
ros/ros2_ws/src/robo-gym-robot-servers/ur_robot_server/launch/: ur_robot_server.launch.py
ros/ros2_ws/src/robo-gym-robot-servers/ur_robot_server/launch/inc/: ur_sim_control.launch.py
ros/ros2_ws/src/robo-gym-robot-servers/ur_robot_server/rviz/: ur_occupancy_rl.rviz  ur_rl.rviz  ur_rob_with_target_tf_rl.rviz
ros/ros2_ws/src/robo-gym-robot-servers/ur_robot_server/ur_robot_server/: joint_trajectory_command_handler.py  robot_server.py  ros_bridge.py
ros/ros2_ws/src/robo-gym-robot-servers/ur_robot_server/urdf/: ur.urdf.xacro  ur_gz.urdf.xacro  ur_macro.xacro
(+22 files in other folders)
