<?xml version="1.0"?>
<package format="3">
  <name>bunker_robot_server</name>
  <version>1.0.0</version>
  <description>Robot Server for bunker</description>

  <maintainer email="matteo.lucchi@joanneum.at">Matteo Lucchi</maintainer>
  <maintainer email="friedemann.zindler@joanneum.at">Friedemann Zindler</maintainer>

  <license>MIT</license>

  <!-- <author email="matteo.lucchi@joanneum.at">Matteo Lucchi</author> -->


  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tmux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
