<?xml version="1.0"?>
<package format="3">
  <name>ur_robot_server</name>
  <version>2.1.2</version>
  <description>Robot Server for Universal Robots robots</description>

  <maintainer email="bernhard.reiterer@joanneum.at">Bernhard Reiterer</maintainer>
  <maintainer email="benjamin.breiling@joanneum.at">Benjamin Breiling</maintainer>

  <license>MIT</license>

  <author email="bernhard.reiterer@joanneum.at">Bernhard Reiterer</author>
  <author email="benjamin.breiling@joanneum.at">Benjamin Breiling</author>
  <author email="nobody@example.com">Matteo Lucchi</author>
  <author email="nobody@example.com">Friedemann Zindler</author>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_gazebo</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>tmux</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
